# nesper

./: nesper.nimble
src/nesper/: consts.nim
src/nesper/build_utils/: tasks.nim
src/nesper/build_utils/templates/esp32_templates/networking/: CMakeLists.txt
src/nesper/esp/: esp_event.nim  mdns.nim
src/nesper/esp/net/: esp_eth.nim  esp_wifi.nim
